<resources>
    <string name="app_name">My Application</string>

    <string name="home_message_home">Contacts</string>
    <string name="home_message_button_add_user">Add user</string>
    <string name="home_message_title">Create user name</string>
    <string name="home_message_name_hint">Name</string>

    <string name="messages_list_new_message">Add Message</string>
    <string name="messages_list_create_message">Create Message</string>
    <string name="messages_list_create_title">Title</string>
    <string name="messages_list_create_body">Message</string>

    <string name="generic_error">Error getting the information</string>
    <string name="success_message_empty_list">No messages yet</string>
    <string name="success_message">Sent Message</string>
</resources>